# mock-stock

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
app/: __init__.py  auth.py  config.py  main.py
app/api/: alerts.py  portfolio.py  positions.py  quote.py  router.py  strategies.py  trade.py  users.py
app/db/: __init__.py  database.py  init_db.py
app/executors/: __init__.py  auto_trade.py  base.py  registry.py  webhook.py  websocket.py
app/models/: __init__.py  base.py  cron_job.py  position.py  price_alert.py  strategy.py  transaction.py  user.py
app/notifiers/: __init__.py  base.py  mcp.py  registry.py  webhook.py  websocket.py
app/quant/: __init__.py  bollinger.py  ema.py  indicators.py  ma.py  macd.py  rsi.py
app/quote/: __init__.py  akshare_provider.py  base.py
app/scheduler/: __init__.py
app/schemas/: __init__.py  alert.py  common.py  portfolio.py  position.py  strategy.py  transaction.py  user.py
app/services/: __init__.py  alert_service.py  portfolio_service.py  position_service.py  strategy_service.py  trade_service.py  user_service.py
app/strategies/: __init__.py  base.py  context.py  context_builder.py  ma.py  macd.py  mcp.py  registry.py  rsi.py  threshold.py
plan/: akfamily_tutorial.md  fund_public.md  implementation-plan.md  requirements.md
tests/: __init__.py  conftest.py  test_alerts.py  test_api.py  test_executors.py  test_models.py  test_portfolio.py  test_positions.py  test_quant.py  test_strategies.py  test_strategies_api.py  test_strategy_impl.py  test_trade.py  test_users.py
